x1158 Support specifying existing external names in file block reg
The manual block reg request has an "existing" boolean field to
specify that the tissue external name is already in use and that's
OK. The file block reg now accepts an additional "existingExternalNames"
parameter listing external names that are known and accepted to be
existing tissues.